
* core: add horizontal scrolling for buffers with free content (command
  /window scroll_horiz) (task #11112)
* api: fix bug with function config_set_desc_plugin (use immediately
  description for option when function is called)
* irc: fix memory leak in message parser (when called from other plugins like
  relay) (bug #33387)
* irc: fix memory leak on plugin unload (free ignores)
* logger: add option logger.file.flush_delay (task #11118)

Version 0.3.5 (2011-05-15)
--------------------------

* core: fix scroll in windows with /window scroll (skip lines "Day changed to")
* core: recalculate buffer_max_length when buffer short name is changed
  (patch #7441)
* core: add buffer to hotlist if away is set on buffer (even if buffer is
  displayed), new option weechat.look.hotlist_add_buffer_if_away (task #10948)
* core: do not update hotlist during upgrade
* core: add option "balance" for command /window (key: alt+"w" + alt+"b")
* core: add option "swap" for command /window (key: alt+"w" + alt+"s")
  (task #11001)
* core: apply new value of option weechat.look.buffer_notify_default to all
  opened buffers
* core: prohibit names beginning with "#" for bars, proxies, filters and IRC
  servers (bug #33020)
* core: add option weechat.look.hotlist_buffer_separator
* core: add messages counts in hotlist for each buffer, new options:
  weechat.look.hotlist_count_max, weechat.look.hotlist_count_min_msg and
  weechat.color.status_count_{msg|private|highlight|other}
* core: add tag "notify_none" (line with this tag will not update hotlist)
* core: add optional bar name in command /bar default
* core: create default bars only if no bar is defined in configuration file
* core: add new option weechat.look.highlight_tags (force highlight on tags)
* core: fix bug with repeat of last completion ("%*"), which failed when many
  templates are used in completion
* core: allow list of buffers in command /filter (exclusion with prefix "!")
  (task #10880)